# cpp_app

./: CMakeLists.txt  LICENSE
cmake/: dependencies.cmake  dependencies.txt
include/app/: app.h  eventmanager.h  updater.h
include/imgui/: ImGui_helpers.h  ImGui_themes.h  ImGui_windowcontrol.h
include/utils/: filedialog.h  logging.h  pipehandler.h  stringconverter.h  timer.h
src/: app.cpp
src/app/: eventmanager.cpp  updater.cpp
src/imgui/: ImGui_themes.cpp  ImGui_windowcontrol.cpp
src/utils/: filedialog.cpp  logging.cpp  pipehandler.cpp  stringconverter.cpp
updater/: updater.cpp
